# flask-cli-tutorial

./: app.py  config.py  extensions.py  pyproject.toml  seed.py  users.sql
api/: views.py
api/resources/: user.py
api/schemas/: user.py
instance/: db.sqlite3
models/: users.py
